Fix archive deployment.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,8 @@ substrate_node_role: "validator"
 substrate_node_bootnodes: ""
 substrate_node_friendly_name: "Standard Validator"
 substrate_node_data_dir: "/data"
+substrate_node_collator_chain: ""
+substrate_node_parachain_id: ""
 # substrate_node_logging: "syslog" | "file"
 substrate_node_logging: "syslog"
 # substrate_node_identity: "alice" | "bob" | "charlie" | "dave" | "eve" | "ferdie"
