--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -42,6 +42,9 @@
 - name: Substrate Install | Archive release push
   block:
     - block:
+        - debug:
+          var: "{{ substrate_node_source }}"
+
         - name: Substrate Install | Unarchive a file that needs to be downloaded
           ansible.builtin.unarchive:
             src: "{{ substrate_node_source }}"
