--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -42,11 +42,17 @@
 - name: Substrate Install | Archive release push
   block:
     - block:
+        - debug:
+            var: "{{ substrate_node_source }}"
+
+        - debug:
+            var: "{{ '://' in substrate_node_source }}"
+
         - name: Substrate Install | Unarchive a file that needs to be downloaded
           ansible.builtin.unarchive:
             src: "{{ substrate_node_source }}"
             dest: /tmp
-            remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
+            remote_src: true
             # remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
             list_files: true
           register: _unarchive_output
