--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -13,6 +13,7 @@
         substrate_node_latest_version: "{{ latest_version.json.tag_name }}"
   when:
     - substrate_node_version == 'latest'
+    - substrate_node_repository != ""
 
 - name: Substrate Install | Download source
   block:
@@ -33,7 +34,7 @@
     - name: Substrate Install | Set fact
       set_fact:
         _binary_updated: true
-        _backup_path: "{{ _release_download.backup_file }}"
+        _backup_path: "{{ _release_download.backup_file | default('Undefined') }}"
       when: _release_download.changed
   when:
     - '"://" in substrate_node_source'
@@ -42,18 +43,11 @@
 - name: Substrate Install | Archive release push
   block:
     - block:
-        - debug:
-            var: substrate_node_source
-
-        - debug:
-            var: "{{ '://' in substrate_node_source }}"
-
         - name: Substrate Install | Unarchive a file that needs to be downloaded
           ansible.builtin.unarchive:
             src: "{{ substrate_node_source }}"
             dest: /tmp
-            remote_src: true
-            # remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
+            remote_src: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
             list_files: true
           register: _unarchive_output
 
@@ -64,10 +58,9 @@
 
     - name: Substrate Install | Move file
       ansible.builtin.copy:
-        # src: "{{ ( _unarchive_output.changed | bool ) | ternary('/tmp/' + _unarchive_output.files[0], substrate_node_source) }}"
         src: "{{ ( '://' in substrate_node_source ) | ternary(_unarchive_output.files[0], substrate_node_source) }}"
         dest: "{{ _substrate_node_bin_path }}"
-        remote_src: true
+        remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: a+x
@@ -78,7 +71,7 @@
     - name: Substrate Install | Set fact
       set_fact:
         _binary_updated: true
-        _backup_path: "{{ _release_push.backup_file }}"
+        _backup_path: "{{ _release_push.backup_file | default('Undefined') }}"
       when: _release_push.changed
   when:
-    - '".tar.gz" in substrate_node_source'
+    - '"://" not in substrate_node_source'
