--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,7 @@ substrate_node_configure: true
 substrate_node_postflight: true
 substrate_node_operations: true
 # example: substrate_node_version: 'latest'
-substrate_node_version: 0.1.0
+substrate_node_version: "latest"
 substrate_node_repository: "digitalnativeinc/standard-substrate"
 substrate_node_source:
   "https://github.com/{{ substrate_node_repository }}/releases/download/\
@@ -15,22 +15,22 @@ substrate_node_releases: "https://api.github.com/repos/{{ substrate_node_reposit
 substrate_node_selinux_enabled: false
 substrate_node_bin_dir: "/usr/local/bin/"
 substrate_node_bin_name: "opportunity-standalone"
-substrate_node_validator: false
+# substrate_node_role: "validator" | "collator" | "rpc"
+substrate_node_role: "validator"
 substrate_node_bootnodes: ""
 substrate_node_friendly_name: "Standard Validator"
 substrate_node_data_dir: "/data"
+substrate_node_collator_chain: ""
+substrate_node_parachain_id: ""
 # substrate_node_logging: "syslog" | "file"
 substrate_node_logging: "syslog"
-substrate_node_use_root: true
-substrate_node_use_existing_user: true
-# substrate_node_identity: "alice" | "bob"
+# substrate_node_identity: "alice" | "bob" | "charlie" | "dave" | "eve" | "ferdie" | "one" | "two" | "dev"
 substrate_node_identity: ""
 # example: substrate_node_pruning: "archive" | "constrained"
 substrate_node_pruning: ""
 substrate_node_user: "standard"
-substrate_node_group: "standard"
-# example: substrate_node_chain: "opportunity"
-substrate_node_chain: ""
+substrate_node_group: "{{ substrate_node_user }}"
+substrate_node_chain: "opportunity"
 # substrate_node_restart: "always" | "on-failure"
 substrate_node_restart: "always"
 substrate_node_p2p_port: 30333
