Add cacheable attribute for peer_id property.

--- a/tasks/postflight.yml
+++ b/tasks/postflight.yml
@@ -17,9 +17,9 @@
     - net_peerCount
 
 - name: Substrate Postflight | Set fact for subsequent plays
-  cacheable: yes
   set_fact:
     peer_id: "{{ node_rpc_result.results[0].json.result }}"
+    cacheable: true
 
 - name: Substrate Postflight | Show output
   debug:
