--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,6 +21,9 @@ substrate_node_bootnodes: ""
 substrate_node_friendly_name: "Standard Validator"
 substrate_node_data_dir: "/data"
 substrate_node_collator_chain: ""
+substrate_node_collator_bootnodes: ""
+substrate_node_collator_p2p_port: ""
+substrate_node_collator_ws_port: ""
 substrate_node_parachain_id: ""
 # substrate_node_logging: "syslog" | "file"
 substrate_node_logging: "syslog"
