--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -43,7 +43,7 @@
 - name: Substrate Install | Archive release push
   block:
     - block:
-        - name: Substrate Install | Unarchive a file that needs to be downloaded
+        - name: Substrate Install | Unarchive a file to remote
           ansible.builtin.unarchive:
             src: "{{ substrate_node_source }}"
             dest: /tmp
