Add in logging directive.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,7 @@ substrate_node_collator_bootnodes: ""
 substrate_node_collator_p2p_port: ""
 substrate_node_collator_ws_port: ""
 substrate_node_parachain_id: ""
+substrate_node_log_level: ""
 # substrate_node_logging: "syslog" | "file"
 substrate_node_logging: "syslog"
 # substrate_node_identity: "alice" | "bob" | "charlie" | "dave" | "eve" | "ferdie" | "one" | "two" | "dev"
