--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,6 +24,7 @@ substrate_node_collator_chain: ""
 substrate_node_collator_bootnodes: ""
 substrate_node_collator_p2p_port: ""
 substrate_node_collator_ws_port: ""
+substrate_node_collator_flag: false
 substrate_node_parachain_id: ""
 substrate_node_log_level: ""
 # substrate_node_logging: "syslog" | "file"
