--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -63,7 +63,7 @@
         remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
-        mode: a+x
+        mode: 0744
         backup: true
         force: true
       register: _release_push
@@ -75,3 +75,18 @@
       when: _release_push.changed
   when:
     - '"://" not in substrate_node_source'
+
+- name: Substrate Install | Node key setup
+  block:
+    - name: Substrate Install | Create node key file
+      lineinfile:
+        path: /data/node-key
+        state: present
+        create: true
+        line: substrate_node_configuration.node_key
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        mode: 0600
+      no_log: true
+  when:
+    - substrate_node_configuration.node_key | length
