--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,13 @@
 ---
+#
+# OS Variables
+#
 substrate_node_preflight: true
 substrate_node_install: true
 substrate_node_configure: true
 substrate_node_postflight: true
 substrate_node_operations: true
-# example: substrate_node_version: 'latest'
+# example: substrate_node_version: '0.3.0'
 substrate_node_version: "latest"
 substrate_node_repository: "digitalnativeinc/standard-substrate"
 substrate_node_source:
@@ -15,49 +18,12 @@ substrate_node_releases: "https://api.github.com/repos/{{ substrate_node_reposit
 substrate_node_selinux_enabled: false
 substrate_node_bin_dir: "/usr/local/bin/"
 substrate_node_bin_name: "opportunity-standalone"
-substrate_node_configuration:
-  substrate_node_friendly_name: "Standard Validator"
-  # example: role: "Validator" | "Collator" | "RPC"
-  role: "Validator"
-  bootnodes: null
-  chain: "opportunity"
-  data_dir: "/data"
-  node_key: null
-  # example: pruning: "archive" | "constrained"
-  pruning: null
-  # example: identity: "alice" | "bob" | "charlie" | "dave" | "eve" | "ferdie" | "one" | "two" | "dev"
-  identity: null
-  prometheus_port: 9615
-  prometheus_disable: false
-  prometheus_external: false
-  p2p_port: 30333
-  rpc_port: 9933
-  rpc_external: false
-  ws_port: 9944
-  ws_external: false
-  # example: rpc_cors: "localhost,https://polkadot.js.org" | "all"
-  rpc_cors: null
-  # example: rpc_methods: "Safe" | "Unsafe" | "Auto"
-  rpc_methods: "Auto"
-  # modules: "afg, babe, telemetry, txpool, usage, db, gossip, peerset, state-db, state-trace, sub-libp2p, trie, wasm-executor, wasm-heap"
-  # levels: "error, warn, info, debug, trace"
-  # example: log_level: "info, telemetry=debug, trie=warn"
-  log_level: null
-
-substrate_node_collator_configuration:
-  chain: null
-  bootnodes: null
-  p2p_port: null
-  ws_port: null
-  collator_flag: false
-  parachain_id: null
-
-# substrate_node_logging: "syslog" | "file"
-substrate_node_logging: "syslog"
 substrate_node_user: "standard"
 substrate_node_group: "{{ substrate_node_user }}"
-# substrate_node_restart: "always" | "on-failure"
+# example: substrate_node_restart: "always" | "on-failure"
 substrate_node_restart: "always"
+# substrate_node_logging: "syslog" | "file"
+substrate_node_logging: "syslog"
 substrate_node_logrotate_conf_enable: true
 substrate_node_logrotate_conf:
   paths:
@@ -72,6 +38,47 @@ substrate_node_logrotate_conf:
     - create 0644 {{ substrate_node_user }} adm
     - sharedscripts
 
+#
+# Node Variables
+#
+# substrate_node_role: "validator" | "collator" | "rpc"
+substrate_node_role: "validator"
+substrate_node_bootnodes: null
+substrate_node_friendly_name: "Standard Validator"
+substrate_node_data_dir: "/data"
+# modules: "afg, babe, telemetry, txpool, usage, db, gossip, peerset, state-db, state-trace, sub-libp2p, trie, wasm-executor, wasm-heap"
+# levels: "error, warn, info, debug, trace"
+# example: substrate_node_log_level: "warn, txpool=debug, peerset=trace"
+substrate_node_log_level: null
+# substrate_node_identity: "alice" | "bob" | "charlie" | "dave" | "eve" | "ferdie" | "one" | "two" | "dev"
+substrate_node_identity: null
+# example: substrate_node_pruning: "archive" | "constrained"
+substrate_node_key: null
+substrate_node_pruning: null
+substrate_node_chain: "opportunity"
+substrate_node_p2p_port: 30333
+substrate_node_rpc_port: 9933
+substrate_node_rpc_external: false
+substrate_node_ws_port: 9944
+substrate_node_ws_external: false
+# example: substrate_node_rpc_methods: "Safe" | "Unsafe" | "Auto"
+substrate_node_rpc_methods: "Auto"
+# example: substrate_node_rpc_cors: "localhost,https://polkadot.js.org" | "all"
+substrate_node_rpc_cors: null
+substrate_node_prometheus_port: 9615
+substrate_node_prometheus_disable: false
+substrate_node_prometheus_external: false
+
+#
+# Collator Variables
+#
+substrate_node_collator_chain: ""
+substrate_node_collator_parachain_id: ""
+substrate_node_collator_bootnodes: ""
+substrate_node_collator_p2p_port: ""
+substrate_node_collator_ws_port: ""
+substrate_node_collator_flag: false
+
 # INTERNAL VARIABLES
 _substrate_node_bin_path: "{{ substrate_node_bin_dir }}{{ substrate_node_bin_name }}"
-_node_key_file: /data/node-key
+_substrate_node_key_path: /data/node-key
