--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -92,7 +92,7 @@
   when:
     - item
   with_items:
-    - "{{ substrate_node_configuration.p2p_port }}"
-    - "{{ substrate_node_configuration.rpc_port }}"
-    - "{{ substrate_node_configuration.ws_port }}"
-    - "{{ substrate_node_configuration.prometheus_port }}"
+    - "{{ substrate_node_p2p_port }}"
+    - "{{ substrate_node_rpc_port }}"
+    - "{{ substrate_node_ws_port }}"
+    - "{{ substrate_node_prometheus_port }}"
