--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -83,10 +83,10 @@
         path: /data/node-key
         state: present
         create: true
-        line: substrate_node_configuration.node_key
+        line: substrate_node_key
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: 0600
       no_log: true
   when:
-    - substrate_node_configuration.node_key | length
+    - substrate_node_key | length
