--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -17,64 +17,75 @@
 
 - name: Substrate Install | Download source
   block:
-    - name: Substrate Install | Binary release download
+    - name: Substrate Install | Download source
       get_url:
         url: "{{ substrate_node_source }}"
-        dest: "{{ _substrate_node_bin_path }}"
+        # dest: "{{ _substrate_node_bin_path }}"
+        dest: "{{ ('://' in substrate_node_source ) | ternary(_substrate_node_bin_path, /tmp) }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
-        force: true
+        headers: "{{ substrate_node_get_url_headers is not null | ternary(substrate_node_get_url_headers, default(omit)) }}"
+        # force: true
+        force: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
         mode: a+x
-        backup: true
-      register: _release_download
-      until: _release_download is succeeded
+        # backup: true
+        backup: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
+      register: _download_output
+      until: _download_output is succeeded
       retries: 5
       delay: 2
-
-    - name: Substrate Install | Set fact
-      set_fact:
-        _binary_updated: true
-        _backup_path: "{{ _release_download.backup_file | default('Undefined') }}"
-      when: _release_download.changed
   when:
     - '"://" in substrate_node_source'
-    - '".tar.gz" not in substrate_node_source'
+
+- name: Substrate Install | Push
+  block:
+    - name: Substrate Install | Push from local
+      ansible.builtin.copy:
+        src: "{{ substrate_node_source }}"
+        # dest: "{{ _substrate_node_bin_path }}"
+        dest: "{{ ('.tar.gz' in substrate_node_source ) | ternary(_substrate_node_bin_path, /tmp) }}"
+        # remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
+        remote_src: false
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        mode: 0744
+        # backup: true
+        backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
+        # force: true
+        force: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
+      register: _push_output
+
+  when:
+    - '"://" not in substrate_node_source'
 
 - name: Substrate Install | Archive release push
   block:
-    - block:
-        - name: Substrate Install | Unarchive a file to remote
-          ansible.builtin.unarchive:
-            src: "{{ substrate_node_source }}"
-            dest: /tmp
-            remote_src: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
-            list_files: true
-          register: _unarchive_output
+    - name: Substrate Install | Unarchive a file to remote
+      ansible.builtin.unarchive:
+        src: "/tmp/{{ ( _push_output.changed | bool ) | ternary(_push_output.dest, _download_output.dest) }}"
+        dest: /tmp
+        # remote_src: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
+        remote_src: true
+        list_files: true
+      register: _unarchive_output
+      when: _push_output.changed or _download_output.changed
 
-        - name: Substrate Install | List unarchived files
-          debug:
-            var: _unarchive_output.files
-      when: '".tar.gz" in substrate_node_source'
+    - name: Substrate Install | List unarchived files
+      debug:
+        var: _unarchive_output.files
 
     - name: Substrate Install | Move file
       ansible.builtin.copy:
-        src: "{{ ( '://' in substrate_node_source ) | ternary(_unarchive_output.files[0], substrate_node_source) }}"
+        src: "{{ _unarchive_output.files[0] }}"
         dest: "{{ _substrate_node_bin_path }}"
-        remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
+        remote_src: true
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: 0744
         backup: true
         force: true
-      register: _release_push
-
-    - name: Substrate Install | Set fact
-      set_fact:
-        _binary_updated: true
-        _backup_path: "{{ _release_push.backup_file | default('Undefined') }}"
-      when: _release_push.changed
-  when:
-    - '"://" not in substrate_node_source'
+      register: _unarchive_push
+  when: '".tar.gz" in substrate_node_source'
 
 - name: Substrate Install | Create node key file
   copy:
@@ -94,3 +105,23 @@
     force: true
   no_log: true
   when: substrate_node_key == ""
+# - name: Substrate Install | Set fact
+#   set_fact:
+#     _binary_updated: true
+#     _backup_path: "{{ _release_push.backup_file | default('Undefined') }}"
+#   when:
+#     _release_push.changed or _unarchive_push.changed or _download_output.changed
+
+# - name: Substrate Install | Set fact
+#   set_fact:
+#     # _binary_updated: true
+#     _binary_updated: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
+#     _backup_path: "{{ _push_output.backup_file | default('Undefined') }}"
+#   when: _push_output.changed
+
+# - name: Substrate Install | Set fact
+#   set_fact:
+#     # _binary_updated: true
+#     _binary_updated: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
+#     _backup_path: "{{ _download_output.backup_file | default('Undefined') }}"
+#   when: _download_output.changed
