--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -21,15 +21,15 @@
       get_url:
         url: "{{ substrate_node_source }}"
         # dest: "{{ _substrate_node_bin_path }}"
-        dest: "{{ ('://' in substrate_node_source ) | ternary(_substrate_node_bin_path, /tmp) }}"
+        dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
-        headers: "{{ substrate_node_get_url_headers is not null | ternary(substrate_node_get_url_headers, default(omit)) }}"
-        # force: true
-        force: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
+        headers: "{{ substrate_node_get_url_headers | default(omit) }}"
+        force: true
+        # force: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
         mode: a+x
         # backup: true
-        backup: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
+        backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
       register: _download_output
       until: _download_output is succeeded
       retries: 5
@@ -62,13 +62,13 @@
   block:
     - name: Substrate Install | Unarchive a file to remote
       ansible.builtin.unarchive:
-        src: "/tmp/{{ ( _push_output.changed | bool ) | ternary(_push_output.dest, _download_output.dest) }}"
+        src: "{{ ( _push_output.changed | bool ) | ternary(_push_output.dest, _download_output.dest) }}"
         dest: /tmp
         # remote_src: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
         remote_src: true
         list_files: true
       register: _unarchive_output
-      when: _push_output.changed or _download_output.changed
+      # when: _push_output.changed or _download_output.changed
 
     - name: Substrate Install | List unarchived files
       debug:
@@ -76,7 +76,7 @@
 
     - name: Substrate Install | Move file
       ansible.builtin.copy:
-        src: "{{ _unarchive_output.files[0] }}"
+        src: "{{ _unarchive_output.dest }}/{{ _unarchive_output.files[0] }}"
         dest: "{{ _substrate_node_bin_path }}"
         remote_src: true
         owner: "{{ substrate_node_user }}"
