--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -43,7 +43,7 @@
       ansible.builtin.copy:
         src: "{{ substrate_node_source }}"
         # dest: "{{ _substrate_node_bin_path }}"
-        dest: "{{ ('.tar.gz' in substrate_node_source ) | ternary(_substrate_node_bin_path, /tmp) }}"
+        dest: "{{ ('.tar.gz' in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
         # remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
         remote_src: false
         owner: "{{ substrate_node_user }}"
