--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -62,7 +62,7 @@
   block:
     - name: Substrate Install | Unarchive a file to remote
       ansible.builtin.unarchive:
-        src: "{{ ( _push_output.changed | bool ) | ternary(_push_output.dest, _download_output.dest) }}"
+        src: "{{ ( _push_output is defined ) | ternary(_push_output.dest, _download_output.dest) }}"
         dest: /tmp
         # remote_src: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
         remote_src: true
@@ -73,6 +73,8 @@
     - name: Substrate Install | List unarchived files
       debug:
         var: _unarchive_output.files
+
+    - name:
 
     - name: Substrate Install | Move file
       ansible.builtin.copy:
@@ -95,7 +97,7 @@
     owner: "{{ substrate_node_user }}"
     group: "{{ substrate_node_group }}"
     mode: 0644
-  no_log: true
+  # no_log: true
   when: substrate_node_key | length
 
 - name: Substrate Install | Ensure node key is removed if not specified
@@ -103,7 +105,7 @@
     state: absent
     dest: "{{ _substrate_node_key_path }}"
     force: true
-  no_log: true
+  # no_log: true
   when: substrate_node_key == ""
 
 - name: Substrate Install | Set fact
