--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -64,6 +64,7 @@
       failed_when:
         - '"Discovered new external address for our node" not in service_logs.stdout'
         - '"error" in service_logs.stdout'
+      ignore_errors: true
   when: substrate_node_logging | lower == "syslog"
 
 - block:
@@ -76,6 +77,7 @@
       failed_when:
         - '"Discovered new external address for our node" not in service_logs.stdout'
         - '"error" in service_logs.stdout'
+      ignore_errors: true
 
     - name: Substrate Configure | Get logs
       debug:
