--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -15,20 +15,17 @@
     - substrate_node_version == 'latest'
     - substrate_node_repository != ""
 
-- name: Substrate Install | Download source
+- name: Substrate Install | Download
   block:
-    - name: Substrate Install | Download source
+    - name: Substrate Install | Download binary/archive
       get_url:
         url: "{{ substrate_node_source }}"
-        # dest: "{{ _substrate_node_bin_path }}"
         dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         headers: "{{ substrate_node_get_url_headers | default(omit) }}"
         force: true
-        # force: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
         mode: a+x
-        # backup: true
         backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
       register: _download_output
       until: _download_output is succeeded
@@ -39,42 +36,35 @@
 
 - name: Substrate Install | Push
   block:
-    - name: Substrate Install | Push from local
+    - name: Substrate Install | Push binary/archive from local system
       ansible.builtin.copy:
         src: "{{ substrate_node_source }}"
-        # dest: "{{ _substrate_node_bin_path }}"
         dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
-        # remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
         remote_src: false
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: 0744
-        # backup: true
         backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
-        # force: true
         force: true
       register: _push_output
-
   when:
     - '"://" not in substrate_node_source'
 
-- name: Substrate Install | Archive release push
+- name: Substrate Install | Unarchive
   block:
-    - name: Substrate Install | Unarchive a file to remote
+    - name: Substrate Install | Unarchive a file on file
       ansible.builtin.unarchive:
-        src: "{{ ( _push_output is defined ) | ternary(_push_output.dest, _download_output.dest) }}"
+        src: "{{ ( _push_output.dest is defined ) | ternary(_push_output.dest, _download_output.dest) }}"
         dest: /tmp
-        # remote_src: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
         remote_src: true
         list_files: true
       register: _unarchive_output
-      # when: _push_output.changed or _download_output.changed
 
     - name: Substrate Install | List unarchived files
       debug:
         var: _unarchive_output.files
 
-    - name: Substrate Install | Move file
+    - name: Substrate Install | Move unarchived file
       ansible.builtin.copy:
         src: "{{ _unarchive_output.dest }}/{{ _unarchive_output.files[0] }}"
         dest: "{{ _substrate_node_bin_path }}"
