--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -15,63 +15,88 @@
     - substrate_node_version == 'latest'
     - substrate_node_repository != ""
 
-- name: Substrate Install | Download source
+- name: Substrate Install | Download
   block:
-    - name: Substrate Install | Binary release download
+    - name: Substrate Install | Download binary/archive
       get_url:
         url: "{{ substrate_node_source }}"
-        dest: "{{ _substrate_node_bin_path }}"
+        dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
+        headers: "{{ substrate_node_get_url_headers | default(omit) }}"
         force: true
         mode: a+x
-        backup: true
-      register: _release_download
-      until: _release_download is succeeded
+        backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
+      register: _download_output
+      until: _download_output is succeeded
       retries: 5
       delay: 2
-
-    - name: Substrate Install | Set fact
-      set_fact:
-        _binary_updated: true
-        _backup_path: "{{ _release_download.backup_file | default('Undefined') }}"
-      when: _release_download.changed
   when:
     - '"://" in substrate_node_source'
-    - '".tar.gz" not in substrate_node_source'
 
-- name: Substrate Install | Archive release push
+- name: Substrate Install | Push
   block:
-    - block:
-        - name: Substrate Install | Unarchive a file that needs to be downloaded
-          ansible.builtin.unarchive:
-            src: "{{ substrate_node_source }}"
-            dest: /tmp
-            remote_src: "{{ ('://' in substrate_node_source ) | ternary(true, false) }}"
-            list_files: true
-          register: _unarchive_output
-
-        - name: Substrate Install | List unarchived files
-          debug:
-            var: _unarchive_output.files
-      when: '".tar.gz" in substrate_node_source'
-
-    - name: Substrate Install | Move file
+    - name: Substrate Install | Push binary/archive from local system
       ansible.builtin.copy:
-        src: "{{ ( '://' in substrate_node_source ) | ternary(_unarchive_output.files[0], substrate_node_source) }}"
-        dest: "{{ _substrate_node_bin_path }}"
-        remote_src: "{{ ( '://' in substrate_node_source ) | ternary(true, false) }}"
+        src: "{{ substrate_node_source }}"
+        dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
+        remote_src: false
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
-        mode: a+x
-        backup: true
+        mode: 0744
+        backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
         force: true
-      register: _release_push
-
-    - name: Substrate Install | Set fact
-      set_fact:
-        _binary_updated: true
-        _backup_path: "{{ _release_push.backup_file | default('Undefined') }}"
-      when: _release_push.changed
+      register: _push_output
   when:
     - '"://" not in substrate_node_source'
+
+- name: Substrate Install | Unarchive
+  block:
+    - name: Substrate Install | Unarchive the binary archive on remote
+      ansible.builtin.unarchive:
+        src: "{{ ( _push_output.dest is defined ) | ternary(_push_output.dest, _download_output.dest) }}"
+        dest: /tmp
+        remote_src: true
+        list_files: true
+      register: _unarchive_output
+
+    - name: Substrate Install | List unarchived files
+      debug:
+        var: _unarchive_output.files
+
+    - name: Substrate Install | Move unarchived file
+      ansible.builtin.copy:
+        src: "{{ _unarchive_output.dest }}/{{ _unarchive_output.files[0] }}"
+        dest: "{{ _substrate_node_bin_path }}"
+        remote_src: true
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        mode: 0744
+        backup: true
+        force: true
+      register: _unarchive_push
+  when: '".tar.gz" in substrate_node_source'
+
+- name: Substrate Install | Create node key file
+  copy:
+    content: "{{ substrate_node_key }}"
+    dest: "{{ _substrate_node_key_path }}"
+    force: true
+    owner: "{{ substrate_node_user }}"
+    group: "{{ substrate_node_group }}"
+    mode: 0644
+  # no_log: true
+  when: substrate_node_key | length
+
+- name: Substrate Install | Ensure node key is removed if not specified
+  file:
+    state: absent
+    dest: "{{ _substrate_node_key_path }}"
+    force: true
+  # no_log: true
+  when: substrate_node_key == ""
+
+- name: Substrate Install | Set fact
+  set_fact:
+    _binary_updated: true
+  when: (_release_push.changed is defined) or (_unarchive_push.changed is defined) or (_download_output.changed is defined)
