--- a/tasks/preflight.yml
+++ b/tasks/preflight.yml
@@ -41,7 +41,7 @@
     that: 
       - "{{ item }} | type_debug == 'int'"
       - "{{ item }} > 0"
-      - "{{ item }} =< 65535"
+      - "{{ item }} <= 65535"
     fail_msg: Port must be numeric and uint16
     success_msg: Port set properly
   loop:
