Disable systemd service when purging chain.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -51,10 +51,10 @@ substrate_node_data_dir: "/data"
 # levels: "error, warn, info, debug, trace"
 # example: substrate_node_log_level: "warn, txpool=debug, peerset=trace"
 substrate_node_log_level: ""
-# substrate_node_identity: "alice" | "bob" | "charlie" | "dave" | "eve" | "ferdie" | "one" | "two" | "dev"
+substrate_node_identity_options: ["alice", "bob", "charlie", "dave", "eve", "ferdie", "one", "two", "dev"]
 substrate_node_identity: ""
-# example: substrate_node_pruning: "archive" | "constrained"
 substrate_node_key: ""
+# example: substrate_node_pruning: "archive" | "constrained"
 substrate_node_pruning: ""
 # example: substrate_node_execution: "Native | "Wasm" | "Both" | "NativeElseWasm"
 substrate_node_execution: ""
